--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,7 @@ h3 {
 .card-shadows{
   box-shadow:0px 0px 10px 0px black !important;
 }
+.menu-shadows{
+  box-shadow:0px 0px 10px 0px black !important;
+  
+}
