--- a/src/App.css
+++ b/src/App.css
@@ -6,18 +6,18 @@
 }
 
 h1 {
-  color: #107BC0;
+  color: #107bc0;
   font-size: 3rem;
 }
 
 .text-area {
   text-align: center;
-  margin-bottom: 2rem
+  margin-bottom: 2rem;
 }
 
 p {
   font-style: normal;
-  color: #4F4F4F;
+  color: #4f4f4f;
   font-size: 1.1rem;
 }
 
@@ -26,18 +26,17 @@ p {
 }
 
 h2 {
-  color: #107BC0;
-  font-size: 2rem
+  color: #107bc0;
+  font-size: 2rem;
 }
 
 h3 {
   color: #094063;
 }
 
-.card-shadows{
-  box-shadow:0px 0px 10px 0px black !important;
+.card-shadows {
+  box-shadow: 0px 0px 10px 0px #d1e0eb !important;
 }
-.menu-shadows{
-  box-shadow:0px 0px 10px 0px black !important;
-  
+.menu-shadows {
+  box-shadow: 0px 0px 10px 0px #d1e0eb !important;
 }
