--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,7 @@ h3 {
 .menu-shadows {
   box-shadow: 0px 0px 10px 0px #d1e0eb !important;
 }
+
+.paystack-modal {
+  width: fit-content !important;
+}
